--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
 HOST = "postgresql://postgres:postgres@localhost:5433/cars_api"
 TRACK = False
+URI = 'SQLALCHEMY_DATABASE_URI'
+MOD = 'SQLALCHEMY_TRACK_MODIFICATIONS'
