--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ HOST = "postgresql://postgres:postgres@localhost:5433/cars_api"
 TRACK = False
 URI = 'SQLALCHEMY_DATABASE_URI'
 MOD = 'SQLALCHEMY_TRACK_MODIFICATIONS'
+PORT = "0.0.0.0"
